# api/openapispec/swagger.yaml
@@ -1,18 +1,46 @@
 definitions:
+  constant.RunStatus:
+    enum:
+    - Scheduling
+    - InProgress
+    - Failed
+    - Succeeded
+    - Cancelled
+    - Queued
+    type: string
+    x-enum-varnames:
+    - RunStatusScheduling
+    - RunStatusInProgress
+    - RunStatusFailed
+    - RunStatusSucceeded
+    - RunStatusCancelled
+    - RunStatusQueued
+  constant.RunType:
+    enum:
+    - Generate
+    - Preview
+    - Apply
+    - Destroy
+    type: string
+    x-enum-varnames:
+    - RunTypeGenerate
+    - RunTypePreview
+    - RunTypeApply
+    - RunTypeDestroy
   constant.SourceProviderType:
     enum:
+    - git
     - git
     - github
     - oci
     - local
-    - git
     type: string
     x-enum-varnames:
+    - DefaultSourceType
     - SourceProviderTypeGit
     - SourceProviderTypeGithub
     - SourceProviderTypeOCI
     - SourceProviderTypeLocal
-    - DefaultSourceType
   constant.StackState:
     enum:
     - UnSynced
@@ -188,6 +216,15 @@ definitions:
       creationTimestamp:
         description: CreationTimestamp is the timestamp of the created for the resource.
         type: string
+      dependsOn:
+        description: DependsOn is the depends on of the resource.
+        items:
+          type: string
+        type: array
+      extensions:
+        additionalProperties: true
+        description: Extensions is the extensions of the resource.
+        type: object
       iamResourceID:
         description: IAMResourceID is the id of the resource in IAM.
         type: string
@@ -230,6 +267,82 @@ definitions:
         description: UpdateTimestamp is the timestamp of the updated for the resource.
         type: string
     type: object
+  entity.ResourceGraph:
+    properties:
+      relations:
+        items:
+          $ref: '#/definitions/entity.ResourceRelation'
+        type: array
+      resources:
+        additionalProperties:
+          $ref: '#/definitions/entity.ResourceInfo'
+        type: object
+      workload:
+        type: string
+    type: object
+  entity.ResourceInfo:
+    properties:
+      cloudResourceID:
+        description: CloudResourceID is the id of the resource in the cloud.
+        type: string
+      iamResourceID:
+        description: IAMResourceID is the id of the resource in IAM.
+        type: string
+      resourceName:
+        description: ResourceName is the name of the resource.
+        type: string
+      resourcePlane:
+        description: ResourcePlane is the plane of the resource.
+        type: string
+      resourceType:
+        description: ResourceType is the type of the resource.
+        type: string
+      status:
+        description: Status is the status of the resource.
+        type: string
+    type: object
+  entity.ResourceRelation:
+    properties:
+      dependencyResource:
+        type: string
+      dependentResource:
+        type: string
+    type: object
+  entity.Run:
+    properties:
+      creationTimestamp:
+        description: CreationTimestamp is the timestamp of the created for the run.
+        type: string
+      id:
+        description: ID is the id of the run.
+        type: integer
+      logs:
+        description: |-
+          Result RunResult `yaml:"result" json:"result"`
+          Logs is the logs of the run.
+        type: string
+      result:
+        description: Result is the result of the run.
+        type: string
+      stack:
+        allOf:
+        - $ref: '#/definitions/entity.Stack'
+        description: Stack is the stack of the run.
+      status:
+        allOf:
+        - $ref: '#/definitions/constant.RunStatus'
+        description: Status is the status of the run.
+      type:
+        allOf:
+        - $ref: '#/definitions/constant.RunType'
+        description: RunType is the type of the run provider.
+      updateTimestamp:
+        description: UpdateTimestamp is the timestamp of the updated for the run.
+        type: string
+      workspace:
+        description: Workspace is the target workspace of the run.
+        type: string
+    type: object
   entity.Source:
     properties:
       creationTimestamp:
@@ -246,6 +359,9 @@ definitions:
         items:
           type: string
         type: array
+      name:
+        description: Name is the name of the source.
+        type: string
       owners:
         description: Owners is a list of owners for the source.
         items:
@@ -518,6 +634,9 @@ definitions:
         items:
           type: string
         type: array
+      name:
+        description: Name is the name of the source.
+        type: string
       owners:
         description: Owners is a list of owners for the source.
         items:
@@ -530,6 +649,7 @@ definitions:
         description: SourceProvider is the type of the source provider.
         type: string
     required:
+    - name
     - remote
     - sourceProvider
     type: object
@@ -595,6 +715,13 @@ definitions:
     - backendID
     - name
     - owners
+    type: object
+  request.StackImportRequest:
+    properties:
+      importedResources:
+        additionalProperties:
+          type: string
+        type: object
     type: object
   request.UpdateBackendRequest:
     properties:
@@ -713,6 +840,9 @@ definitions:
         items:
           type: string
         type: array
+      name:
+        description: Name is the name of the source.
+        type: string
       owners:
         description: Owners is a list of owners for the source.
         items:
@@ -726,6 +856,9 @@ definitions:
         type: string
     required:
     - id
+    - name
+    - remote
+    - sourceProvider
     type: object
   request.UpdateStackRequest:
     properties:
@@ -1840,6 +1973,163 @@ paths:
       summary: Get resource
       tags:
       - resource
+  /api/v1/resources/graph:
+    get:
+      description: Get resource graph by stack ID
+      operationId: getResourceGraph
+      parameters:
+      - description: Stack ID
+        in: query
+        name: stack_id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: '#/definitions/entity.ResourceGraph'
+        "400":
+          description: Bad Request
+          schema: {}
+        "401":
+          description: Unauthorized
+          schema: {}
+        "404":
+          description: Not Found
+          schema: {}
+        "429":
+          description: Too Many Requests
+          schema: {}
+        "500":
+          description: Internal Server Error
+          schema: {}
+      summary: Get resource graph
+      tags:
+      - resource
+  /api/v1/runs:
+    get:
+      description: List all runs
+      operationId: listRun
+      parameters:
+      - description: ProjectID to filter runs by. Default to all
+        in: query
+        name: projectID
+        type: integer
+      - description: OrgID to filter runs by. Default to all
+        in: query
+        name: orgID
+        type: integer
+      - description: ProjectName to filter runs by. Default to all
+        in: query
+        name: projectName
+        type: string
+      - description: Cloud to filter runs by. Default to all
+        in: query
+        name: cloud
+        type: string
+      - description: Environment to filter runs by. Default to all
+        in: query
+        name: env
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Success
+          schema:
+            items:
+              $ref: '#/definitions/entity.Stack'
+            type: array
+        "400":
+          description: Bad Request
+          schema: {}
+        "401":
+          description: Unauthorized
+          schema: {}
+        "404":
+          description: Not Found
+          schema: {}
+        "429":
+          description: Too Many Requests
+          schema: {}
+        "500":
+          description: Internal Server Error
+          schema: {}
+      summary: List runs
+      tags:
+      - stack
+  /api/v1/runs/{run_id}:
+    get:
+      description: Get run information by run ID
+      operationId: getRun
+      parameters:
+      - description: Run ID
+        in: path
+        name: run
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: '#/definitions/entity.Run'
+        "400":
+          description: Bad Request
+          schema: {}
+        "401":
+          description: Unauthorized
+          schema: {}
+        "404":
+          description: Not Found
+          schema: {}
+        "429":
+          description: Too Many Requests
+          schema: {}
+        "500":
+          description: Internal Server Error
+          schema: {}
+      summary: Get run
+      tags:
+      - run
+  /api/v1/runs/{run_id}/result:
+    get:
+      description: Get run result by run ID
+      operationId: getRunResult
+      parameters:
+      - description: Run ID
+        in: path
+        name: run
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: '#/definitions/entity.Run'
+        "400":
+          description: Bad Request
+          schema: {}
+        "401":
+          description: Unauthorized
+          schema: {}
+        "404":
+          description: Not Found
+          schema: {}
+        "429":
+          description: Too Many Requests
+          schema: {}
+        "500":
+          description: Internal Server Error
+          schema: {}
+      summary: Get run result
+      tags:
+      - run
   /api/v1/sources:
     get:
       description: List source information by source ID
@@ -2042,10 +2332,6 @@ paths:
         in: query
         name: env
         type: string
-      - description: Whether to get last synced base revision. Default to false
-        in: query
-        name: getLastSyncedBase
-        type: boolean
       produces:
       - application/json
       responses:
@@ -2241,6 +2527,20 @@ paths:
         name: stack_id
         required: true
         type: integer
+      - description: The resources to import during the stack preview
+        in: body
+        name: importedResources
+        schema:
+          $ref: '#/definitions/request.StackImportRequest'
+      - description: The target workspace to preview the spec in.
+        in: query
+        name: workspace
+        required: true
+        type: string
+      - description: Import existing resources during the stack preview
+        in: query
+        name: importResources
+        type: boolean
       - description: The Spec ID to use for the apply. Will generate a new spec if
           omitted.
         in: query
@@ -2280,6 +2580,69 @@ paths:
       summary: Apply stack
       tags:
       - stack
+  /api/v1/stacks/{stack_id}/apply/async:
+    post:
+      description: Start a run and asynchronously apply stack changes by stack ID
+      operationId: applyStackAsync
+      parameters:
+      - description: Stack ID
+        in: path
+        name: stack_id
+        required: true
+        type: integer
+      - description: The resources to import during the stack preview
+        in: body
+        name: importedResources
+        schema:
+          $ref: '#/definitions/request.StackImportRequest'
+      - description: The target workspace to preview the spec in.
+        in: query
+        name: workspace
+        required: true
+        type: string
+      - description: Import existing resources during the stack preview
+        in: query
+        name: importResources
+        type: boolean
+      - description: The Spec ID to use for the apply. Will generate a new spec if
+          omitted.
+        in: query
+        name: specID
+        type: string
+      - description: Force the apply even when the stack is locked. May cause concurrency
+          issues!!!
+        in: query
+        name: force
+        type: boolean
+      - description: Apply in dry-run mode
+        in: query
+        name: dryrun
+        type: boolean
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: '#/definitions/entity.Run'
+        "400":
+          description: Bad Request
+          schema: {}
+        "401":
+          description: Unauthorized
+          schema: {}
+        "404":
+          description: Not Found
+          schema: {}
+        "429":
+          description: Too Many Requests
+          schema: {}
+        "500":
+          description: Internal Server Error
+          schema: {}
+      summary: Asynchronously apply stack
+      tags:
+      - stack
   /api/v1/stacks/{stack_id}/destroy:
     post:
       description: Destroy stack information by stack ID
@@ -2290,6 +2653,11 @@ paths:
         name: stack_id
         required: true
         type: integer
+      - description: The target workspace to preview the spec in.
+        in: query
+        name: workspace
+        required: true
+        type: string
       - description: Force the destroy even when the stack is locked. May cause concurrency
           issues!!!
         in: query
@@ -2324,6 +2692,56 @@ paths:
       summary: Destroy stack
       tags:
       - stack
+  /api/v1/stacks/{stack_id}/destroy/async:
+    post:
+      description: Start a run and asynchronously destroy stack resources by stack
+        ID
+      operationId: destroyStackAsync
+      parameters:
+      - description: Stack ID
+        in: path
+        name: stack_id
+        required: true
+        type: integer
+      - description: The target workspace to preview the spec in.
+        in: query
+        name: workspace
+        required: true
+        type: string
+      - description: Force the destroy even when the stack is locked. May cause concurrency
+          issues!!!
+        in: query
+        name: force
+        type: boolean
+      - description: Destroy in dry-run mode
+        in: query
+        name: dryrun
+        type: boolean
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Success
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema: {}
+        "401":
+          description: Unauthorized
+          schema: {}
+        "404":
+          description: Not Found
+          schema: {}
+        "429":
+          description: Too Many Requests
+          schema: {}
+        "500":
+          description: Internal Server Error
+          schema: {}
+      summary: Asynchronously destroy stack
+      tags:
+      - stack
   /api/v1/stacks/{stack_id}/generate:
     post:
       description: Generate stack information by stack ID
@@ -2334,6 +2752,11 @@ paths:
         name: stack_id
         required: true
         type: integer
+      - description: The target workspace to preview the spec in.
+        in: query
+        name: workspace
+        required: true
+        type: string
       - description: 'The format to generate the spec in. Choices are: spec. Default
           to spec.'
         in: query
@@ -2368,16 +2791,79 @@ paths:
       summary: Generate stack
       tags:
       - stack
-  /api/v1/stacks/{stack_id}/preview:
+  /api/v1/stacks/{stack_id}/generate/async:
     post:
-      description: Preview stack information by stack ID
-      operationId: previewStack
+      description: Start a run and asynchronously generate stack spec by stack ID
+      operationId: generateStackAsync
       parameters:
       - description: Stack ID
         in: path
         name: stack_id
         required: true
         type: integer
+      - description: The target workspace to preview the spec in.
+        in: query
+        name: workspace
+        required: true
+        type: string
+      - description: 'The format to generate the spec in. Choices are: spec. Default
+          to spec.'
+        in: query
+        name: format
+        type: string
+      - description: Force the generate even when the stack is locked
+        in: query
+        name: force
+        type: boolean
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: '#/definitions/v1.Spec'
+        "400":
+          description: Bad Request
+          schema: {}
+        "401":
+          description: Unauthorized
+          schema: {}
+        "404":
+          description: Not Found
+          schema: {}
+        "429":
+          description: Too Many Requests
+          schema: {}
+        "500":
+          description: Internal Server Error
+          schema: {}
+      summary: Asynchronously generate stack
+      tags:
+      - stack
+  /api/v1/stacks/{stack_id}/preview:
+    post:
+      description: Start a run and asynchronously preview stack changes by stack ID
+      operationId: previewStackAsync
+      parameters:
+      - description: Stack ID
+        in: path
+        name: stack_id
+        required: true
+        type: integer
+      - description: The resources to import during the stack preview
+        in: body
+        name: importedResources
+        schema:
+          $ref: '#/definitions/request.StackImportRequest'
+      - description: The target workspace to preview the spec in.
+        in: query
+        name: workspace
+        required: true
+        type: string
+      - description: Import existing resources during the stack preview
+        in: query
+        name: importResources
+        type: boolean
       - description: 'Output format. Choices are: json, default. Default to default
           output format in Kusion.'
         in: query
@@ -2401,7 +2887,7 @@ paths:
         "200":
           description: Success
           schema:
-            $ref: '#/definitions/models.Changes'
+            $ref: '#/definitions/entity.Run'
         "400":
           description: Bad Request
           schema: {}
@@ -2417,7 +2903,7 @@ paths:
         "500":
           description: Internal Server Error
           schema: {}
-      summary: Preview stack
+      summary: Asynchronously preview stack
       tags:
       - stack
   /api/v1/workspaces:
